object-card: fix random overlapping anchors in col layout [STC2-596]

--- a/src/components/blocks/object-card/_object-card.scss
+++ b/src/components/blocks/object-card/_object-card.scss
@@ -60,6 +60,7 @@
 
   &__anchor {
     display: block;
+    overflow: hidden;
     position: relative;
 
     &::after {
